--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ torchvision; sys_platform == 'darwin'
 torchaudio+cu118; sys_platform != 'darwin'
 torchaudio; sys_platform == 'darwin'
 huggingface_hub
-transformers
+transformers>=4.31.0
